--- a/src/Core/AppNavBar/NavBar.css
+++ b/src/Core/AppNavBar/NavBar.css
@@ -1,100 +1,26 @@
-/* NavBar.css */
-.app-bar {
-    background-color: white;
-    box-shadow: 1px 4px 60px darkgrey;
-    text-shadow: 1px 4px 30px darkgrey;
-}
+/* ButtonAppBar.css */
 
-.toolbar {
+.appBar {
+    background-color: #ec991d; /* Adjust the color to match your theme */
+  }
+  
+  .toolbar {
     justify-content: space-between;
-    align-items: center;
-}
-.nav-items {
-    display: flex;
-    align-items: center; 
-    margin-left: 20px; 
-}
-
-.nav-item {
-    color: #000;
-    font-family: "monospace";
-    text-transform: lowercase; 
-    margin-right: 10px; 
-    font-variant: small-caps; 
-}
-
-.logo {
-    flex-grow: 0;
-    flex-shrink: 0;
-    max-width: 150px; 
-}
-
-.menu-button {
-    display: none; 
-}
-
-.nav-items {
-    display: flex; 
-}
-
-.announcement-box {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: #000;
-}
-
-.announcement-text {
-    margin: 0;
-    padding: 0 10px;
-    font-weight: normal;
-    font-family: "monospace";
-}
-
-@media (max-width: 768px) {
-    
-    .app-bar {
-        justify-content: space-between; 
-    }
-
-    /* .logo {
-      
-    } */
-
-    .menu-button {
-        display: block; 
-    }
-
-    .nav-items,
-    .announcement-box {
-        display: none; 
-    }
-
-    .drawer-container {
-        display: flex;
-        flex-direction: column; 
-        padding: 16px;
-        background-color: white;
-    }
-}
-
-@media (min-width: 769px) {
-    /* Desktop styles */
-    .menu-button {
-        display: none; 
-    }
-
-    .nav-items {
-        display: flex; 
-    }
-
-    .announcement-box {
-        display: flex;
-    }
-
-    
-    .logo {
-        max-width: 150px; 
-        margin-right: 32px;
-    }
-}
+  }
+  
+  .title {
+    flex-grow: 1;
+    font-weight: bold;
+  }
+  
+  .loginButton {
+    color: #fff;
+    background-color: #5c6bc0; /* Adjust the button color to match your theme */
+    border-radius: 4px;
+    padding: 6px 16px;
+  }
+  
+  .loginButton:hover {
+    background-color: #3f51b5; /* Slightly darker shade on hover */
+  }
+  
