--- a/src/AppStyles.css
+++ b/src/AppStyles.css
@@ -19,6 +19,6 @@ html, body, #root {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: auto; /* Adds scroll to the content area if content exceeds viewport height */
+    overflow: auto;
   }
   
