--- a/src/App/VideoMaker/VideoMaker.css
+++ b/src/App/VideoMaker/VideoMaker.css
@@ -1,7 +1,7 @@
 .VideoMkr {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     min-height: 100vh;
 }
@@ -12,4 +12,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.settings {
+    width: 100%;
 }
