video maker ux update

--- a/src/App/VideoMaker/VideoMaker.css
+++ b/src/App/VideoMaker/VideoMaker.css
@@ -1,9 +1,9 @@
 .VideoMkr {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-    
+    position: relative;
 }
 
 .ProcessSteps {
