--- a/src/AppStyles.css
+++ b/src/AppStyles.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 html,
 body,
 #root {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica neue', Courier, monospace;
+  font-family: 'Roboto', sans-serif;
 }
 
 .mainContainer {
