--- a/src/App/VideoMaker/VideoMakerHome.css
+++ b/src/App/VideoMaker/VideoMakerHome.css
@@ -11,11 +11,20 @@
 }
 
 .loader {
-    margin-top: 80px;
+    margin-top: 60px;
     position: relative;
     display: flex;
     flex-direction: column; /* Set direction to column */
     justify-content: center;
     align-items: center;
     width: 100vw; /* Set width to 100% for responsiveness */
+}
+
+.loadingContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 120px); /* Adjust height as needed */
+    width: 100%;
 }
